--- a/muzhouguoji/assets/css/base.css
+++ b/muzhouguoji/assets/css/base.css
@@ -250,10 +250,12 @@
   height: auto;
 }
 
-.item_box .content {
+.item_box .project-item-content {
   background: #fff;
   text-align: center;
   font-size: 14px;
+  width: 100%;
+  margin: 0;
 }
 
 .item_box ul {
@@ -1307,8 +1309,9 @@
   font-size: 14px;
   line-height: 28px;
   padding-top: 5px;
-  margin-left: 0px;
+  /* margin-left: 0px; */
   text-align: center;
+  margin: 0;
 }
 
 .fhm-cl-b li {
