--- a/muzhouguoji/assets/less/div.less
+++ b/muzhouguoji/assets/less/div.less
@@ -4,7 +4,7 @@
 
   // header
   .head .logo a>img {
-    width: 220px;
+    width: 80px;
   }
 
   // footer
@@ -1054,6 +1054,10 @@
   .head {
     height: 60px;
 
+    .telym {
+      display: none;
+    }
+
     .logo {
       margin: 0 0 0 20px;
 
@@ -1065,6 +1069,10 @@
     .phone-icon {
       display: block;
     }
+  }
+
+  .logo>a>img {
+    width: 80px;
   }
 
   .menu {
@@ -1084,6 +1092,11 @@
 @media screen and (max-width: 1250px) {
   .my-container {
     padding: 0 30px
+  }
+
+  .head {
+    width: 100%;
+    padding: 0 30px;
   }
 
   .footer .con {
