--- a/muzhouguoji/assets/css/main.css
+++ b/muzhouguoji/assets/css/main.css
@@ -1,10 +1,24 @@
 .news-container {
-  width: 1170px;
-  padding: 0 15px;
+  width: 1200px;
+  padding: 0;
   margin: 0 auto;
+}
+.news-container .post-columns {
+  padding: 0 30px;
 }
 .project-container {
   max-width: 1200px;
+}
+.head .telym {
+  padding: 14px 0;
+}
+.head .telym .phone-number {
+  height: 36px;
+  line-height: 36px;
+  font-size: 28px;
+  font-weight: 600;
+  color: #1796f1;
+  font-family: "Microsoft YaHei", "Arial", "Helvetica", "Regular";
 }
 .head .phone-icon {
   display: none;
@@ -60,4 +74,10 @@
 .contact-map .baidu-map-wrap {
   width: 800px;
   height: 300px;
+}
+.blog-content {
+  width: 100%;
+  max-width: 1200px;
+  padding: 0 30px;
+  margin: 0 auto;
 }
