--- a/muzhouguoji/assets/css/template.css
+++ b/muzhouguoji/assets/css/template.css
@@ -27,17 +27,17 @@ iframe {
 }
 
 ::-moz-selection {
-  background: #27CBC0;
+  background: #1796f1;
   color: #fff !important;
 }
 
 ::-webkit-selection {
-  background: #27CBC0;
+  background: #1796f1;
   color: #fff !important;
 }
 
 ::selection {
-  background: #27CBC0;
+  background: #1796f1;
   color: #fff !important;
 }
 
@@ -58,7 +58,7 @@ iframe {
 */
 
 a {
-  color: #27CBC0;
+  color: #1796f1;
   -webkit-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
 }
@@ -67,7 +67,7 @@ a:hover,
 a:focus {
   outline: 0;
   text-decoration: none;
-  color: #1fa098;
+  color: #1796f1;
 }
 
 h1 a,
@@ -210,7 +210,7 @@ h6.text-uppercase,
 
 .divider-line:after {
   display: block;
-  background: #27CBC0;
+  background: #1796f1;
   content: " ";
   margin: 20px auto 20px 0;
   opacity: 0.6;
@@ -255,7 +255,7 @@ hr {
   content: "";
   display: block;
   width: 35px;
-  border-bottom: 2px solid #27CBC0;
+  border-bottom: 2px solid #1796f1;
   margin: 20px auto 25px 0;
   z-index: 1;
   position: relative;
@@ -324,11 +324,11 @@ hr {
 }
 
 .color-brand {
-  color: #27CBC0 !important;
+  color: #1796f1 !important;
 }
 
 .color-brand-hvr {
-  color: #1fa098 !important;
+  color: #1796f1 !important;
 }
 
 .color-facebook {
@@ -571,7 +571,7 @@ hr {
 }
 
 .alert-brand {
-  background: #27CBC0;
+  background: #1796f1;
   color: #17756f;
 }
 
@@ -594,7 +594,7 @@ hr {
 
 .progress-bar {
   position: relative;
-  background-color: #27CBC0;
+  background-color: #1796f1;
   border-radius: 28px;
   box-shadow: none;
   color: #333333;
@@ -658,7 +658,7 @@ hr {
 }
 
 .label-base {
-  background: #27CBC0;
+  background: #1796f1;
 }
 
 /*------------------------------------------------------------------
@@ -675,7 +675,7 @@ hr {
 }
 
 .form-control:focus {
-  border-color: #27CBC0;
+  border-color: #1796f1;
   box-shadow: none;
 }
 
@@ -883,8 +883,8 @@ table th {
 /* --- [Button Colors] --- */
 
 .btn.btn-base {
-  background-color: #27CBC0;
-  border-color: #27CBC0;
+  background-color: #1796f1;
+  border-color: #1796f1;
   color: #fff;
 }
 
@@ -897,13 +897,13 @@ table th {
 
 .btn.btn-base.btn-outline {
   background: transparent;
-  border-color: #27CBC0;
-  color: #27CBC0;
+  border-color: #1796f1;
+  color: #1796f1;
 }
 
 .btn.btn-base.btn-outline:hover,
 .btn.btn-base.btn-outline:focus {
-  background: #27CBC0;
+  background: #1796f1;
   color: #fff;
 }
 
@@ -918,7 +918,7 @@ table th {
 .btn.btn-base.btn-link:focus {
   background-color: transparent;
   text-decoration: none;
-  color: #27CBC0;
+  color: #1796f1;
 }
 
 .btn.btn-base.btn-fade {
@@ -930,8 +930,8 @@ table th {
 .btn.btn-base.btn-fade:hover,
 .btn.btn-base.btn-fade:focus {
   background: transparent;
-  border-color: #27cbc0;
-  color: #27cbc0;
+  border-color: #1796f1;
+  color: #1796f1;
 }
 
 .btn.btn-gray {
@@ -994,8 +994,8 @@ table th {
 
 .btn.btn-dark:hover,
 .btn.btn-dark:focus {
-  background-color: #27CBC0;
-  border-color: #27CBC0;
+  background-color: #1796f1;
+  border-color: #1796f1;
   color: #fff;
 }
 
@@ -1411,7 +1411,7 @@ table th {
 
 .breadcrumb a:hover,
 .breadcrumb a:focus {
-  color: #27CBC0;
+  color: #1796f1;
 }
 
 .breadcrumb>li+li:before {
@@ -1438,7 +1438,7 @@ table th {
 .box-icon-left .icon-box-icon,
 .box-icon-right .icon-box-icon {
   font-size: 34px;
-  color: #27CBC0;
+  color: #1796f1;
   margin: 0 0 10px;
 }
 
@@ -1744,7 +1744,7 @@ body.off-canvas-cart-open:after {
   padding: 2px;
   border-width: 2px;
   border-style: solid;
-  border-color: #27CBC0 transparent transparent transparent;
+  border-color: #1796f1 transparent transparent transparent;
   border-radius: 50%;
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -1991,7 +1991,7 @@ body.off-canvas-cart-open:after {
   position: absolute;
   width: 100%;
   height: 2px;
-  background: #27CBC0;
+  background: #1796f1;
   bottom: 10px;
   opacity: 0;
   -webkit-transition: all 0.3s ease;
@@ -2001,7 +2001,7 @@ body.off-canvas-cart-open:after {
 }
 
 .nav-text-tabs>li.active>a {
-  color: #27CBC0;
+  color: #1796f1;
 }
 
 .nav-text-tabs>li.active>a:after {
@@ -2177,12 +2177,12 @@ body.off-canvas-cart-open:after {
 }
 
 .owl-controls-brand .owl-page span {
-  background: #27CBC0;
+  background: #1796f1;
 }
 
 .owl-controls-brand .owl-page.active span {
   background: transparent;
-  box-shadow: 0px 0px 0px 3px #27cbc0;
+  box-shadow: 0px 0px 0px 3px #1796f1;
 }
 
 @media (max-width: 767px) {
@@ -2222,15 +2222,15 @@ body.off-canvas-cart-open:after {
 .pagination>li>a:focus,
 .pagination>li>span:hover,
 .pagination>li>span:focus {
-  background: #27CBC0;
-  border-color: #27CBC0;
+  background: #1796f1;
+  border-color: #1796f1;
   color: #ffffff;
 }
 
 .pagination>.active>a,
 .pagination>.active>span {
-  background: #27CBC0;
-  border-color: #27CBC0;
+  background: #1796f1;
+  border-color: #1796f1;
   color: #ffffff;
 }
 
@@ -2238,8 +2238,8 @@ body.off-canvas-cart-open:after {
 .pagination>.active>a:focus,
 .pagination>.active>span:hover,
 .pagination>.active>span:focus {
-  background: #27CBC0;
-  border-color: #27CBC0;
+  background: #1796f1;
+  border-color: #1796f1;
   color: #ffffff;
 }
 
@@ -2264,8 +2264,8 @@ body.off-canvas-cart-open:after {
 .pager li>a:focus,
 .pager li>span:hover,
 .pager li>span:focus {
-  background: #27CBC0;
-  border-color: #27CBC0;
+  background: #1796f1;
+  border-color: #1796f1;
   color: #ffffff;
 }
 
@@ -2550,12 +2550,12 @@ body.off-canvas-cart-open:after {
 }
 
 .owl-page span {
-  background: #27CBC0;
+  background: #1796f1;
 }
 
 .owl-page.active span {
   background: transparent;
-  box-shadow: 0px 0px 0px 3px #27cbc0;
+  box-shadow: 0px 0px 0px 3px #1796f1;
 }
 
 /* --- [ Carousel Controls White ] --- */
@@ -2654,7 +2654,7 @@ body.off-canvas-cart-open:after {
 
 .social-icons>li>a:hover,
 .social-icons>li>a:focus {
-  background: #27CBC0;
+  background: #1796f1;
   color: #ffffff;
 }
 
@@ -2848,7 +2848,7 @@ body.off-canvas-cart-open:after {
 
 .cart-badge {
   position: absolute;
-  background: #27CBC0;
+  background: #1796f1;
   border-radius: 100%;
   height: 14px;
   width: 14px;
@@ -3275,7 +3275,7 @@ body.off-canvas-cart-open:after {
   .header.header-transparent .menu-extras .menu-item a:hover,
   .header.header-transparent .menu-extras .menu-item a:focus {
     /*  color: rgba(255, 255, 255, 0.7); */
-    color: #27cbc0 !important
+    color: #1796f1 !important
   }
 }
 
@@ -3368,7 +3368,7 @@ body.off-canvas-cart-open:after {
   background-repeat: no-repeat;
   background-position: 50% 0;
   position: relative;
-  padding: 140px 0;
+  padding: 45px 0 140px;
 }
 
 .module.divider-top,
@@ -3611,11 +3611,11 @@ body.off-canvas-cart-open:after {
 }
 
 .bg-brand {
-  background-color: #27CBC0 !important;
+  background-color: #1796f1 !important;
 }
 
 .bg-brand-hvr {
-  background-color: #1fa098 !important;
+  background-color: #1796f1 !important;
 }
 
 .bg-facebook {
@@ -4509,7 +4509,7 @@ body.off-canvas-cart-open:after {
   text-transform: uppercase;
   letter-spacing: 1px;
   font-size: 12px;
-  color: #27CBC0;
+  color: #1796f1;
   list-style: none;
   padding: 0;
 }
@@ -4806,7 +4806,7 @@ body.off-canvas-cart-open:after {
 
 .post.format-quote,
 .post.format-quote blockquote {
-  background: #27CBC0;
+  background: #1796f1;
   color: #ffffff;
   -webkit-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
@@ -4859,7 +4859,7 @@ body.off-canvas-cart-open:after {
 
 .tags a:hover,
 .tags a:focus {
-  background: #27CBC0;
+  background: #1796f1;
   color: #ffffff;
 }
 
@@ -4954,7 +4954,7 @@ body.off-canvas-cart-open:after {
 
 .comment-tools a:hover,
 .comment-tools a:focus {
-  color: #27CBC0;
+  color: #1796f1;
 }
 
 @media (min-width: 768px) {
@@ -5058,7 +5058,7 @@ body.off-canvas-cart-open:after {
 
 .star-rating {
   font-family: FontAwesome;
-  color: #27CBC0;
+  color: #1796f1;
 }
 
 .star-rating-1:after {
@@ -5360,7 +5360,7 @@ body.off-canvas-cart-open:after {
 .widget .recent-posts a:hover,
 .widget .recent-posts a:focus {
   opacity: 0.7;
-  color: #27cbc0
+  color: #1796f1
 }
 
 .widget-posts-image {
@@ -5440,7 +5440,7 @@ body.off-canvas-cart-open:after {
 
 .icons-list a:hover,
 .icons-list a:focus {
-  color: #27CBC0;
+  color: #1796f1;
 }
 
 .icons-list a>.fa,
@@ -5585,7 +5585,7 @@ address.map-background {
 
 .copyright-mf a:hover,
 .footer .a1-mf:hover {
-  color: #27Cbc0
+  color: #1796f1
 }
 
 @media screen and (max-width:1199px) {
@@ -5665,15 +5665,15 @@ address.map-background {
 }
 
 .fa-mf li:hover a .fa {
-  color: #27cbc0;
+  color: #1796f1;
 }
 
 .scroll-top:hover {
-  border: 2px solid #27cbc0;
+  border: 2px solid #1796f1;
 }
 
 .scroll-top:hover .fa {
-  color: #27cbc0;
+  color: #1796f1;
 }
 
 .wechat3-mf {
@@ -5710,7 +5710,7 @@ address.map-background {
 }
 
 .btn.btn1-mf:hover {
-  color: #27cbc0
+  color: #1796f1
 }
 
 @media screen and (max-width: 767px) {
@@ -5772,7 +5772,7 @@ address.map-background {
 
 .new-list-mf a:hover,
 .back-list-mf a:hover {
-  color: #1fa098
+  color: #1796f1
 }
 
 @media screen and (max-width: 767px) {
@@ -5814,5 +5814,5 @@ address.map-background {
 }
 
 .icon1-mf li:hover a .fa {
-  color: #27cbc0
+  color: #1796f1
 }
