--- a/muzhouguoji/assets/css/main.css
+++ b/muzhouguoji/assets/css/main.css
@@ -40,7 +40,7 @@
   display: none;
   width: 100%;
   background: rgba(23, 150, 241, 0.8);
-  position: absolute;
+  position: fixed;
   border-top: 2px solid #eee;
   top: 60px;
   left: 0;
@@ -74,6 +74,9 @@
 .contact-map .baidu-map-wrap {
   width: 800px;
   height: 300px;
+}
+.contact-map .baidu-map-wrap img {
+  max-width: none;
 }
 .blog-content {
   width: 100%;
