--- a/muzhouguoji/assets/less/div.less
+++ b/muzhouguoji/assets/less/div.less
@@ -10,8 +10,8 @@
   // footer
   .footer {
     .footbox {
-      height: 140px;
-      padding: 0 15px;
+      height: auto;
+      padding: 0 15px 15px;
 
       .con {
         width: 100%;
@@ -94,7 +94,28 @@
     margin: 0;
 
     .left {
-      width: 22%;
+      width: 100%;
+      float: none;
+      display: flex;
+      flex-wrap: wrap;
+
+      li {
+        img {
+          margin-left: 30px !important;
+        }
+
+        &:first-child {
+          width: 100%;
+        }
+      }
+
+      .tab-item {
+        width: auto;
+        padding: 0 20px;
+        border: none;
+        text-indent: 0;
+        display: inline-block;
+      }
     }
 
     .right {
@@ -193,7 +214,7 @@
 
         .address {
           width: 96%;
-          margin: 0 auto;
+          margin: 20px auto 0;
 
           .qrcode {
             width: 50%;
@@ -211,8 +232,8 @@
   // footer
   .footer {
     .footbox {
-      height: 120px;
-      padding: 0 15px;
+      height: auto;
+      padding: 0 15px 15px;
 
       .con {
         width: 100%;
@@ -377,7 +398,7 @@
 
         .address {
           width: 96%;
-          margin: 0 auto;
+          margin: 20px auto 0;
           position: relative;
 
           .qrcode {
@@ -562,7 +583,7 @@
 
         .address {
           width: 96%;
-          margin: 0 auto;
+          margin: 20px auto 0;
           position: relative;
 
           .qrcode {
@@ -730,7 +751,7 @@
 
         .address {
           width: 96%;
-          margin: 0 auto;
+          margin: 20px auto 0;
           position: relative;
 
           .qrcode {
@@ -895,7 +916,7 @@
 
         .address {
           width: 96%;
-          margin: 0 auto;
+          margin: 20px auto 0;
           position: relative;
 
           .qrcode {
@@ -1051,15 +1072,22 @@
 @media screen and (max-width: 767px) {
 
   // header
-  .head {
+  .wrapper-under-phone-header {
     height: 60px;
+  }
+
+  .head {
+    position: fixed;
+    height: 60px;
+    background-color: #f8f7f7;
+    z-index: 999;
 
     .telym {
       display: none;
     }
 
     .logo {
-      margin: 0 0 0 20px;
+      margin: 0 0 0 -15px;
 
       a>img {
         padding: 7px 0;
