--- a/muzhouguoji/assets/less/main.less
+++ b/muzhouguoji/assets/less/main.less
@@ -56,7 +56,7 @@
   display: none;
   width: 100%;
   background: rgba(23, 150, 241, 0.8);
-  position: absolute;
+  position: fixed;
   border-top: 2px solid #eee;
   top: 60px;
   left: 0;
@@ -99,6 +99,10 @@
   .baidu-map-wrap {
     width: 800px;
     height: 300px;
+
+    img {
+      max-width: none
+    }
   }
 }
 
