--- a/muzhouguoji/assets/css/main.css
+++ b/muzhouguoji/assets/css/main.css
@@ -1,3 +1,8 @@
+html,
+body {
+  height: 100%;
+  overflow: auto;
+}
 .news-container {
   width: 1200px;
   padding: 0;
@@ -57,6 +62,7 @@
 }
 .phone-nav .phone-nav-ul li a {
   color: #eee;
+  width: 100%;
 }
 .phone-nav .phone-nav-ul .nav-active {
   color: #fff;
