--- a/muzhouguoji/assets/less/div.less
+++ b/muzhouguoji/assets/less/div.less
@@ -1107,6 +1107,49 @@
     display: none;
   }
 
+  .phone-nav {
+    max-height: 460px;
+    overflow-y: scroll;
+
+    .phone-nav-ul {
+      padding: 0;
+
+      .menurr {
+        position: relative;
+        margin-top: 0;
+        width: 100%;
+        display: none;
+
+        .sub-menu-row {
+          width: 100%;
+          display: block;
+
+          .mlft {
+            width: 100%;
+            display: block;
+
+            .passport {
+              padding-left: 20px;
+              text-align: left;
+            }
+          }
+
+          .mrft {
+            width: 100%;
+            display: block;
+
+            a {
+              width: auto;
+              min-width: 25%;
+              padding: 0 14px;
+              display: inline-block;
+            }
+          }
+        }
+      }
+    }
+  }
+
   .under-nav {
     margin-top: 60px;
   }
