--- a/muzhouguoji/assets/less/main.less
+++ b/muzhouguoji/assets/less/main.less
@@ -1,5 +1,11 @@
 @import 'variable.less';
 
+html,
+body {
+  height: 100%;
+  overflow: auto;
+}
+
 .news-container {
   width: 1200px;
   padding: 0;
@@ -74,6 +80,7 @@
 
       a {
         color: #eee;
+        width: 100%;
       }
     }
 
