--- a/muzhouguoji/assets/less/div.less
+++ b/muzhouguoji/assets/less/div.less
@@ -2,6 +2,14 @@
 
 @media screen and (min-width:320px) and (max-width:399px) {
 
+  .fhm-corresponding {
+    width: 70%;
+  }
+
+  .fhm-cl-li {
+    width: 160px;
+  }
+
   // header
   .head .logo a>img {
     width: 80px;
@@ -414,6 +422,10 @@
 }
 
 @media screen and (min-width: 500px) and (max-width:639px) {
+
+  .fhm-corresponding {
+    width: 80%;
+  }
 
   // footer
   .footer {
