--- a/richu_web/assets/less/response.less
+++ b/richu_web/assets/less/response.less
@@ -12,14 +12,23 @@
 
       .title {
         font-size: 18px;
-        margin-bottom: 15px;
+        margin-bottom: 0;
+        line-height: 24px;
+      }
+
+      .index-pager-wrap {
+        height: 40px;
+
+        .i-p-pager {
+          display: none;
+        }
       }
 
       .content {
         font-size: 14px;
         line-height: 24px;
-        margin: 0 0 15px;
-        width: 100%;
+        margin: 0 0 25px;
+        width: 90%;
 
         &:before {
           display: none;
@@ -28,7 +37,7 @@
 
       .partner {
         flex-direction: column;
-        margin: 0 0 20px 0;
+        margin: 0 0 25px 0;
 
         .p-label {
           margin-top: 0;
@@ -47,7 +56,7 @@
 
       .number-group {
         align-items: flex-start;
-        margin: 0 0 20px;
+        margin: 0 0 30px;
 
         .number {
           font-size: 14px;
@@ -439,7 +448,7 @@
       .contact-item {
         width: 90%;
         padding-top: 20px;
-        justify-content: flex-start;
+        justify-content: center;
 
         &:not(:last-child) {
           margin-right: 0;
@@ -659,6 +668,8 @@
   .culture-top-banner,
   .about-top-banner {
     height: 340px;
+    background-position: bottom left;
+    background-size: 200% 100%;
   }
 
   .search-container {
@@ -765,25 +776,34 @@
 
 @media screen and (min-width: 500px) and (max-width:639px) {
   .index-section {
-    padding: 30px 0;
+    padding: 30px 0 20px;
 
     .middle-container {
       padding: 60px 40px 30px 20px;
 
       .title {
         font-size: 24px;
-        margin-bottom: 20px;
+        line-height: 30px;
+      }
+
+      .index-pager-wrap {
+        height: 40px;
+
+        .i-p-pager {
+          display: none;
+        }
       }
 
       .content {
         font-size: 16px;
-        line-height: 32px;
-        margin: 20px;
+        line-height: 28px;
+        margin: 0 15px 45px;
         width: 90%;
       }
 
       .partner {
         flex-direction: column;
+        margin-bottom: 40px;
 
         .p-label {
           margin-top: 0;
@@ -1210,13 +1230,40 @@
 }
 
 @media screen and (min-width: 640px) and (max-width:767px) {
-  .index-section {
-    .middle-container {
-      padding: 0 20px;
+  .index-fixed-pagination {
+    right: 10px;
+    bottom: 10px;
 
-      .title {
-        font-size: 36px;
-        margin-bottom: 30px;
+    .i-p-btn-group {
+      .i-p-btn {
+        width: 40px;
+        height: 40px;
+      }
+    }
+  }
+
+  .index-section {
+    padding: 40px 0;
+
+    .title {
+      font-size: 36px;
+      line-height: 40px;
+    }
+
+    .index-pager-wrap {
+      height: 40px;
+    }
+
+    .content {
+      width: 90%;
+      margin-bottom: 30px;
+      font-size: 16px;
+      line-height: 28px;
+    }
+
+    .index-pager-wrap {
+      .i-p-pager {
+        right: -40px;
       }
     }
   }
@@ -1549,6 +1596,32 @@
     }
   }
 
+  .index-section {
+    padding: 40px 0;
+
+    .title {
+      font-size: 36px;
+      line-height: 40px;
+    }
+
+    .index-pager-wrap {
+      height: 40px;
+    }
+
+    .content {
+      width: 90%;
+      margin-bottom: 30px;
+      font-size: 16px;
+      line-height: 28px;
+    }
+
+    .index-pager-wrap {
+      .i-p-pager {
+        right: -40px;
+      }
+    }
+  }
+
   .project-tab-container {
     .project-content {
       .proj-content-item {
@@ -1717,6 +1790,32 @@
     }
   }
 
+  .index-section {
+    padding: 40px 0;
+
+    .title {
+      font-size: 36px;
+      line-height: 40px;
+    }
+
+    .index-pager-wrap {
+      height: 40px;
+    }
+
+    .content {
+      width: 90%;
+      margin-bottom: 30px;
+      font-size: 16px;
+      line-height: 28px;
+    }
+
+    .index-pager-wrap {
+      .i-p-pager {
+        right: -40px;
+      }
+    }
+  }
+
   .project-tab-container {
     .project-content {
       .proj-content-item {
@@ -1842,6 +1941,43 @@
 }
 
 @media screen and (min-width: 1200px) and (max-width:1499px) {
+  .index-fixed-pagination {
+    right: 10px;
+    bottom: 10px;
+
+    .i-p-btn-group {
+      .i-p-btn {
+        width: 40px;
+        height: 40px;
+      }
+    }
+  }
+
+  .index-section {
+    padding: 40px 0;
+
+    .title {
+      font-size: 36px;
+      line-height: 40px;
+    }
+
+    .index-pager-wrap {
+      height: 40px;
+    }
+
+    .content {
+      margin-bottom: 30px;
+      font-size: 16px;
+      line-height: 28px;
+    }
+
+    .index-pager-wrap {
+      .i-p-pager {
+        right: -40px;
+      }
+    }
+  }
+
   .project-tab-container {
     .project-content {
       .proj-content-item {
@@ -1936,20 +2072,19 @@
 
 }
 
-@media screen and (max-width: 639px) {
+@media screen and (max-width:1350px) {
+  .contact-tab-container {
+    .contact-map {
+      display: none;
+    }
 
-  .index-fixed-pagination,
-  .index-section .index-pager-wrap {
-    display: none;
+    .contact-map-img {
+      display: block;
+    }
   }
 
 }
 
-@media screen and (min-width: 640px) and (max-width:767px) {
-  .index-section .index-pager-wrap {
-    display: none;
-  }
-}
 
 @media screen and (min-width: 768px) and (max-width:1199px) {
   .index-section .index-pager-wrap .i-p-pager {
@@ -1957,7 +2092,7 @@
   }
 }
 
-@media screen and (min-width: 1200px) and (max-width:1700px) {
+@media screen and (min-width: 1500px) and (max-width:1700px) {
   .index-section .index-pager-wrap .i-p-pager {
     right: -15px;
   }
