--- a/richu_web/assets/css/main.css
+++ b/richu_web/assets/css/main.css
@@ -5,7 +5,6 @@
 body,
 td,
 th {
-  font-family: regularFont;
   font-size: 16px;
   color: #434343;
 }
@@ -15,6 +14,12 @@ body {
   width: 100%;
   margin: 0;
   padding: 0;
+}
+* {
+  font-family: "Microsoft YaHei";
+}
+body > iframe {
+  display: none;
 }
 a {
   border: 0;
@@ -47,7 +52,7 @@ a:focus {
   width: 100%;
   height: 105px;
   text-align: left;
-  background: rgba(0, 0, 0, 0.3);
+  background: rgba(0, 0, 0, 0.2);
   position: fixed;
   top: 0;
   left: 0;
@@ -58,6 +63,9 @@ a:focus {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+.header .h-content .h-logo {
+  display: inline-block;
 }
 .header .h-content .h-logo img {
   width: 100%;
@@ -85,10 +93,11 @@ a:focus {
   width: 100%;
   height: 100%;
   text-align: center;
-  line-height: 105px;
   font-size: 18px;
   font-weight: bold;
-  display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: #fff;
 }
 .header .h-content .h-nav .h-search {
@@ -130,10 +139,11 @@ a:focus {
   overflow: hidden;
   display: none;
   width: 100%;
-  background: rgba(255, 255, 255, 0.8);
-  position: absolute;
+  background: rgba(255, 255, 255, 0.9);
+  position: fixed;
   top: 60px;
   left: 0;
+  z-index: 999;
 }
 .header .phone-nav .phone-nav-ul {
   text-align: center;
@@ -148,14 +158,14 @@ a:focus {
   color: #007f68;
 }
 .fixed-top {
-  position: fixed;
-  top: -105px;
-  left: 50%;
-  transform: translateX(-50%);
-  z-index: 999;
+  background: rgba(0, 0, 0, 0.4);
+  height: 60px;
 }
 .under-nav {
   margin-top: 150px;
+}
+.section-top {
+  margin-top: 110px;
 }
 .footer .btn-scroll-top {
   height: 54px;
@@ -538,28 +548,27 @@ a:focus {
   background-repeat: no-repeat;
 }
 .about-tab-container {
+  background: #fff;
   width: 100%;
   border-bottom: 1px solid #D5D5D5;
   display: flex;
+}
+.about-tab-container.tab-fixed-top {
+  position: fixed;
+  top: 60px;
+  z-index: 99;
 }
 .about-tab-container .a-tab-item {
   width: 50%;
   height: 54px;
   text-align: center;
+  cursor: pointer;
+  user-select: none;
 }
 .about-tab-container .a-tab-item:nth-child(1) {
   border-right: 1px solid #D5D5D5;
 }
-.about-tab-container .a-tab-item a {
-  font-size: 18px;
-  line-height: 54px;
-  font-weight: bold;
-  color: #007f68;
-  display: inline-block;
-  position: relative;
-  margin-bottom: 0;
-}
-.about-tab-container .a-tab-item a.active:before {
+.about-tab-container .a-tab-item.active span:before {
   position: absolute;
   top: 20px;
   left: -18px;
@@ -572,19 +581,17 @@ a:focus {
   transition: linear 0.3s all;
   -webkit-transition: linear 0.3s all;
 }
-.about-tab-container .a-tab-item a:hover {
-  color: #333333;
+.about-tab-container .a-tab-item:hover span {
+  color: rgba(0, 127, 104, 0.6);
 }
-.about-tab-container .a-tab-item a:hover:before {
-  position: absolute;
-  top: 20px;
-  left: -18px;
-  content: '';
+.about-tab-container .a-tab-item span {
+  font-size: 18px;
+  line-height: 54px;
+  font-weight: bold;
+  color: #007f68;
   display: inline-block;
-  width: 10px;
-  height: 10px;
-  border-radius: 5px;
-  background: #333333;
+  position: relative;
+  margin-bottom: 0;
 }
 .ri-chu-about {
   padding-top: 125px;
@@ -725,7 +732,13 @@ a:focus {
 .project-tab-container .project-tab {
   width: 100%;
   border-bottom: 1px solid #D5D5D5;
+  background: #fff;
   display: flex;
+}
+.project-tab-container .project-tab.tab-fixed-top {
+  position: fixed;
+  top: 60px;
+  z-index: 99;
 }
 .project-tab-container .project-tab .proj-tab-item {
   width: 25%;
@@ -855,9 +868,9 @@ a:focus {
   font-family: Microsoft YaHei;
 }
 .project-tab-container .project-content .proj-content-item .content-tab-wrap .content-detail .fx-num-group .num span {
-  padding-left: 10px;
+  padding-left: 6px;
   font-size: 14px;
-  color: #757575;
+  color: #C0C0C0;
   font-weight: normal;
 }
 .project-tab-container .project-content .proj-content-item .content-tab-wrap .content-detail .fx-image-row {
@@ -1097,14 +1110,11 @@ a:focus {
   justify-content: space-between;
   align-items: center;
 }
-.top-news-wrap:hover .left-content .c-btn-more {
-  background: #007f68;
-  color: #fff;
-}
 .top-news-wrap .left-content {
   width: 30%;
 }
 .top-news-wrap .left-content .c-title {
+  display: block;
   font-size: 24px;
   color: #007f68;
   line-height: 32px;
@@ -1116,6 +1126,7 @@ a:focus {
   margin-bottom: 30px;
 }
 .top-news-wrap .left-content .c-content {
+  display: block;
   font-size: 14px;
   color: #606060;
   line-height: 24px;
@@ -1134,6 +1145,10 @@ a:focus {
   cursor: pointer;
   user-select: none;
 }
+.top-news-wrap .left-content .c-btn-more:hover {
+  background: #007f68;
+  color: #fff;
+}
 .top-news-wrap .right-img {
   width: 65%;
 }
@@ -1147,16 +1162,13 @@ a:focus {
   max-width: 480px;
   margin-bottom: 85px;
 }
-.news-list-wrap .news-item-wrap:hover .c-btn-more {
-  background: #007f68;
-  color: #fff;
-}
 .news-list-wrap .news-item-wrap .c-img {
   width: 100%;
   height: 312px;
   margin-bottom: 25px;
 }
 .news-list-wrap .news-item-wrap .c-title {
+  display: block;
   font-size: 18px;
   color: #007f68;
   line-height: 20px;
@@ -1171,6 +1183,7 @@ a:focus {
   margin-bottom: 30px;
 }
 .news-list-wrap .news-item-wrap .c-content {
+  display: block;
   font-size: 14px;
   color: #606060;
   line-height: 24px;
@@ -1193,6 +1206,10 @@ a:focus {
   cursor: pointer;
   user-select: none;
 }
+.news-list-wrap .news-item-wrap .c-btn-more:hover {
+  background: #007f68;
+  color: #fff;
+}
 .news-pagination {
   width: auto;
   display: flex;
@@ -1214,7 +1231,6 @@ a:focus {
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 2px solid #fff;
   cursor: pointer;
   user-select: none;
 }
@@ -1223,9 +1239,6 @@ a:focus {
   transition: linear 0.3s all;
   -webkit-transition: linear 0.3s all;
 }
-.news-pagination .btn-pre-next:hover {
-  border-color: #007f68;
-}
 .news-pagination .btn-pre-next:hover.p-pre img {
   margin-right: 5px;
 }
@@ -1233,10 +1246,9 @@ a:focus {
   margin-left: 5px;
 }
 .news-pagination .page-item {
-  margin: 0 2px;
   display: inline-block;
-  width: 52px;
-  height: 52px;
+  width: 51px;
+  height: 51px;
   background: #fff;
   border-radius: 50%;
   transition: linear 0.3s all;
@@ -1244,7 +1256,7 @@ a:focus {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 20px;
+  font-size: 18px;
   line-height: 52px;
   color: #333333;
   font-weight: bold;
@@ -1253,6 +1265,7 @@ a:focus {
 }
 .news-pagination .page-item:hover,
 .news-pagination .page-item.active {
+  font-size: 20px;
   color: #fff;
   background: #007f68;
 }
@@ -1363,7 +1376,13 @@ a:focus {
 .culture-tab-container .culture-tab {
   width: 100%;
   border-bottom: 1px solid #D5D5D5;
+  background: #fff;
   display: flex;
+}
+.culture-tab-container .culture-tab.tab-fixed-top {
+  position: fixed;
+  top: 60px;
+  z-index: 99;
 }
 .culture-tab-container .culture-tab .culture-tab-item {
   width: 50%;
@@ -1596,6 +1615,14 @@ a:focus {
   left: 0;
   transform: none;
 }
+@keyframes locationJump {
+  from {
+    top: -14px;
+  }
+  to {
+    top: -20px;
+  }
+}
 .contact-tab-container .title-wrap {
   padding: 110px 0;
   display: flex;
@@ -1659,14 +1686,31 @@ a:focus {
   left: 34.07%;
 }
 .contact-tab-container .contact-map .company-location img {
+  position: absolute;
+  top: -14px;
+  left: 6px;
   width: 27px;
-  margin-bottom: 50px;
+  animation: locationJump 0.4s linear infinite alternate;
 }
 .contact-tab-container .contact-map .company-location .company-name {
+  display: inline-block;
+  margin-left: 40px;
+  margin-top: 20px;
   font-size: 24px;
   font-weight: bold;
   color: #007f68;
   line-height: 24px;
+}
+.contact-tab-container .contact-map-img {
+  display: none;
+  width: 100%;
+  max-width: 1350px;
+  margin: 0 auto 80px;
+  overflow: hidden;
+  position: relative;
+}
+.contact-tab-container .contact-map-img img {
+  width: 100%;
 }
 .company-contact-container {
   min-height: 740px;
@@ -2067,4 +2111,26 @@ a:focus {
 }
 .fx-project-wrap .fx-project-detail-pos .fx-project-detail-window .proj-win-detail-item .right-img .img-wrap {
   display: inline-block;
+}
+.privacy-section {
+  max-width: 1240px;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0 20px;
+  overflow: hidden;
+}
+.privacy-section .privacy-editor {
+  margin: 80px auto;
+}
+.privacy-section .privacy-editor h3 {
+  font-size: 26px;
+  line-height: 30px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+.privacy-section .privacy-editor p {
+  font-size: 16px;
+  line-height: 30px;
+  text-indent: 32px;
 }
