修改百度分享样式

--- a/richu_web/assets/less/main.less
+++ b/richu_web/assets/less/main.less
@@ -26,10 +26,6 @@ body {
   font-family: "Microsoft YaHei"
 }
 
-body>iframe {
-  display: none;
-}
-
 a {
   border: 0;
   text-decoration: none;
@@ -2564,5 +2560,15 @@ a {
       line-height: 30px;
       text-indent: 32px;
     }
+  }
+}
+
+
+.bd_weixin_popup {
+  width: 255px !important;
+  height: 310px !important;
+
+  .bd_weixin_popup_foot {
+    text-align: center !important;
   }
 }
