--- a/richu_web/assets/css/main.css
+++ b/richu_web/assets/css/main.css
@@ -18,9 +18,6 @@ body {
 * {
   font-family: "Microsoft YaHei";
 }
-body > iframe {
-  display: none;
-}
 a {
   border: 0;
   text-decoration: none;
@@ -2133,4 +2130,11 @@ a:focus {
   font-size: 16px;
   line-height: 30px;
   text-indent: 32px;
+}
+.bd_weixin_popup {
+  width: 255px !important;
+  height: 310px !important;
+}
+.bd_weixin_popup .bd_weixin_popup_foot {
+  text-align: center !important;
 }
