修复底部白边和响应式首页滚定进度动画

--- a/richu_web/assets/css/main.css
+++ b/richu_web/assets/css/main.css
@@ -2138,3 +2138,7 @@ a:focus {
 .bd_weixin_popup .bd_weixin_popup_foot {
   text-align: center !important;
 }
+iframe {
+  display: block;
+  height: 0;
+}
