--- a/richu_web/assets/less/main.less
+++ b/richu_web/assets/less/main.less
@@ -13,7 +13,7 @@ th {
   color: #434343;
 }
 
-// 通用样式
+// 通用样式 
 html,
 body {
   height: 100%;
@@ -2571,4 +2571,9 @@ a {
   .bd_weixin_popup_foot {
     text-align: center !important;
   }
+}
+
+iframe {
+  display: block;
+  height: 0;
 }
