--- a/richu_web/assets/less/main.less
+++ b/richu_web/assets/less/main.less
@@ -390,6 +390,21 @@ a {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+  transition: linear 1s all;
+  -webkit-transition: linear 1s all;
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
+  -webkit-transform-style: preserve-3d;
+  -moz-transform-style: preserve-3d;
+  transform-style: preserve-3d;
+
+  &.active {
+    visibility: visible;
+    opacity: 1;
+  }
 
   .middle-container {
     max-width: 1700px;
@@ -1502,6 +1517,7 @@ a {
     display: inline-block;
     width: 51px;
     height: 51px;
+    margin: 0 2px;
     background: #fff;
     border-radius: 50%;
     transition: linear 0.3s all;
@@ -2095,11 +2111,12 @@ a {
 
       .c-detail-row {
         font-size: 14px;
+        font-family: Microsoft YaHei;
         color: #606060;
         padding-left: 30px;
         display: block;
-        line-height: 22px;
-        margin-bottom: 10px;
+        max-height: 20px;
+        margin-bottom: 25px;
         position: relative;
 
         img {
@@ -2107,6 +2124,12 @@ a {
           top: 50%;
           left: 0px;
           transform: translateY(-50%);
+        }
+
+        span {
+          display: inline-block;
+          max-width: 292px;
+          line-height: 20px;
         }
       }
 
@@ -2185,6 +2208,7 @@ a {
   position: fixed;
   right: 45px;
   bottom: 48px;
+  z-index: 100;
 
   .i-p-num.current {
     display: none;
